Fix styling to work on mobile

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -120,9 +120,12 @@
   }
 
   .blurr{
-
-    background: rgb(1,35,64);
     background: linear-gradient(180deg, rgba(1,35,64,1) 0%, rgba(217,227,233,1) 80%, rgba(255,255,255,1) 100%);
+    width: 100vw;
+
+    .columns {
+      margin: -12px 0 0;
+    }
   }
 
  
